fix display of svg logo, on firefox at least

--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -141,7 +141,7 @@
 
     footer .links-grid {
         @include svg-background('/assets/img/eums-logo.svg', '/assets/img/eums-logo.png');
-        background-size: 147px 83px;
+        background-size: 146px 83px;
         padding-left: 27%;
     }
 }
